--- a/index.html
+++ b/index.html
@@ -1,16 +1,64 @@
+<!-- Guillermo Conde para ironhack 17/08/2020 -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+  <main>
+    <section class="main-section">
+      <div class="iphone-image">
+        <img src="images/phones.png" alt="movil">
+      </div>
+      <div class="right-box">
+        <div class="logo">
+          <img src="images/brand.png" alt="instalogo" class="logo-img">
+          <a href="">
+            <img src="images/home.png" alt="" class="img-logo">
+            Log in
+          </a>
+        </div>
+        <div class="main-text">
+          <h2>Capture and Share</br> the World`s Moments</h2>
+          <p>Instagram is a <b>fast, beautiful </b> and <b>fun</b> way to share your life
+            with
+            friends and family.</p>
+          <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world.</p>
+          <p>Oh yeah, did we mention it's free?
+          </p>
+        </div>
+
+
+        <div class="links-soft">
+          <img src="images/badge-iphone.png" alt="appleimg">
+          <img src="images/badge-android.png" alt="androidimg" class="android-help">
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="footer-main">
+    <ul>
+
+      <li> <a href="">about us</a></li>
+      <li> <a href="">support</a></li>
+      <li><a href="">blog</a></li>
+      <li><a href="press">Press</a></li>
+      <li><a href="">api</a></li>
+      <li><a href="">jobs</a></li>
+      <li><a href="">privacy</a></li>
+      <li><a href="">terms</a></li>
+      <li class="last-text">&copy; 2014 Instagram</li>
+
+    </ul>
+  </footer>
+
+</body>
+
 </html>
