--- a/index.html
+++ b/index.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <!-- <div class= 'casiperono'>
+      
+    </div> -->
+    <main>
+      <figure class= phones>
+        <img src="images/phones.png" alt="overlaped cell phones">
+      </figure>
+      <section>
+        <nav>
+          <figure>
+            <img src="images/brand.png" alt="instagram brand">
+          </figure>
+            <a href="#">
+              <img src="images/home.png" class='icon' alt="Home Icon">Log in
+            </a>
+        </nav>
+        <article>
+          <h1>Capture and Share <br>the World's Moments</h1>
+          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          <div class= 'links'>
+            <a href="#">
+              <img src="images/badge-iphone.png" alt="app store logo">
+            </a>
+            <a href="#">
+              <img src="images/badge-android.png" alt="google play logo">
+            </a>
+          </div>
+        </article>
+      </section>
+    </main>
+    <footer>
+        <ul>
+          <li><a href="#">About us</a></li>  
+          <li><a href="#">Support</a></li>  
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>  
+          <li><a href="#">Appi</a></li>  
+          <li><a href="#">Jobs</a></li>  
+          <li><a href="#">Privacy</a></li>  
+          <li><a href="#">Terms</a></li>  
+        </ul>
+        <span><small>&copy; 2014 Instagram</small></span>
+
+    </footer> 
   </body>
 </html>
