--- a/index.html
+++ b/index.html
@@ -4,13 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css"/>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main> 
+      <section class="box1">
+          <img class="moviles" src="images/phones.png" alt="Teléfonos">
+        <div>
+          <div class="boxlog">
+            <img src="images/brand.png" alt="logoinsta">
+            <a class="home" href="#" ><img  src="images/home.png" alt="Log In"> Log in</a>
+          </div>
+          <div class="boxtext">
+            <div>
+              <h1>Capture and Share </h1> 
+              <h1>the World's Moments</h1>
+              <p> Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+                friends and family.</p>
+                <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p><p>
+                Oh yeah, did we mention it's free?</p>
+            </div>
+            <div">
+              <img src="images/badge-iphone.png" alt="iphone">
+              <img  src="images/badge-android.png" alt="android">
+            </div>
+          </div>
+        </div>    
+      </section>
+    </main>
+    <footer>
+      <nav class="nav-bar">
+        <ul>
+          <li><a href="#" >About us</a></li>
+          <li><a href="#" >Support</a></li>
+          <li><a href="#" >Blog</a></li>
+          <li><a href="#" >Press</a></li>
+          <li><a href="#" >Api</a></li>
+          <li><a href="#" >Jobs</a></li>
+          <li><a href="#" >Privacy</a></li>
+          <li><a href="#" >Terms</a></li>
+          <li><a style="color: grey" href="#" >@2014 Instagram</a></li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
