--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css"
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+      <nav>
+        <img src="images/brand.png" alt="Instagram logo" class="InstaLogo">
+        <a href="#" class="logInButton">
+        <img src="images/home.png" alt="Log in">
+        Log in
+        </a>
+    </nav>
+    </header>
+    <section>      
+      <img src="images/phones.png" alt="Two phones" class="twoPhones">
+      <div class="info">
+        <h1>Capture and Share the World's Moments
+        </h1>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+          friends and family.
+        </p> 
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>  
+          Oh yeah, did we mention it's free?
+        </p>
+        <a href="#">
+          <img src="/lab-css-instagram-clone/images/badge-iphone.png" alt="Download on I-phone" class="iphoneDownloadButton">
+        </a>
+        <a href="#">
+          <img src="/lab-css-instagram-clone/images/badge-android.png" alt="Download on Android">
+        </a>
+      </div>
+  </section>
+  <footer>
+    <a href="#"> About Us</a> 
+    <a href="#"> Support</a> 
+    <a href="#"> Blog</a> 
+    <a href="#"> Press</a>
+    <a href="#"> API</a>
+    <a href="#"> Jobs</a>
+    <a href="#"> Privacy</a>
+    <a href="#"> Terms</a> 
+    <span>&copy; 2014 Instagram</span>
+  </footer>
   </body>
 </html>
