--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <p>Oh yeah, did we mention it's free?</p>
       </div>
       <div class="icon-container">
-        <img src="images/badge-iphone.png" alt="apple-icon" />
-        <img id="android" src="images/badge-android.png" alt="android-icon" />
+       <a href="#"><img src="images/badge-iphone.png" alt="apple-icon" /></a>
+        <a href="#"><img id="android" src="images/badge-android.png" alt="android-icon" /></a>
       </div>
     </section>
     <footer>
