--- a/index.html
+++ b/index.html
@@ -5,12 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
+
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+          <!-- mobile-->
+    <section class="container1">
+      <div>
+        <img src="images/phones.png" alt="mobiles mockup">
+      </div>
+
+      <div>
+      <!-- logo-->
+        <img class="container2" src="images/brand.png" alt="logo instagram">
+      <!--logInButtom -->
+      <div class="button">
+        <button type="button"><img src="/images/home.png">LogIn</button>
+      </div>
+      
+      <div class="backgroundShadow">
+        <!-- Capture & Share-->
+            <h1>Capture and Share 
+              <br>
+              the World's Moments</h1>
+              
+            <p>Instagram is a <strong>fast, beauty </strong>and <strong>fun</strong> way to share your life
+            <br> with
+            friends and family. 
+            <br>
+            <br>
+            Take a picture or video, choose a filter to transform its look
+            <br>
+             and feel, then post to Instagram
+            &mdash; it's that easy. 
+            <br>
+            You can even share to Facebook, Twitter, Tumblr and more. 
+            <br>
+            It's a new way to see the world.
+            <br>
+            <br>
+            Oh yeah, did we mention it's free? </p>
+        </div>
+      </section>
+
+<article>
+  <div class="tiendas"> 
+    <img src="/images/badge-iphone.png" alt="boton ios-btn">
+    <img src="images/badge-android.png" alt="boton gp-btn">
+  </div>   
+</article>
+
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">Api</a></li>
+      <li><a href="#">Jobs
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+    </ul>
+  </footer>
   </body>
 </html>
+
