--- a/index.html
+++ b/index.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <!--<link type="text/css" charset="UTF-8" href="styles.css">-->
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <body>
+        <section>
+            <img id="phones" src="images/phones.png" alt="movil"></img>
+            <div id="contenido">
+                <div id="header">
+                    <img class="logo" src="images/brand.png" alt="Instagramlogo"></imag>
+                    <a href="index.html"><img class="home" src="images/home.png" alt="home" /> Log in</a>
+                </div>
+                <div id="texto">
+                    <h1>Capture and Share the World's Moments</h1>
+                    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+                    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                    <p>Oh yeah, did we mention it's free?</p>
+                </div>
+                <div id="app">
+                    <a href="#"><img id="badge-apple" src="images/badge-iphone.png" alt="iphone" /></a>
+                    <a href="#"><img id="badge-android" src="images/badge-android.png" alt="android"></a>
+                </div>
+            </div>
+        </section>
+        <nav>
+            <ul>
+                <li><a href="#"> About Us </a></li>
+                <li><a href="#"> Support </a></li>
+                <li><a href="#"> Blog </a></li>
+                <li><a href="#"> Press </a></li>
+                <li><a href="#"> API </a></li>
+                <li><a href="#"> Jobs </a></li>
+                <li><a href="#"> Privacy </a></li>
+                <li><a href="#"> Terms </a></li>
+                <li class="copyright">&copy; 2014 Instagram</li>
+            </ul>
+        </nav>
+    </body>
 </html>
