--- a/index.html
+++ b/index.html
@@ -1,16 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <link rel="stylesheet" type="text/css" href="/Users/equipo/Desktop/IronHack/0101-cssInstagramClone/style.css">
+</head>
+
+<body>
+    <!--Fondo-->
+    <section id="background">
+        <img src="/Users/equipo/Desktop/IronHack/0101-cssInstagramClone/lab-css-instagram-clone/images/bgtile.png"
+            alt="Background">
+    </section>
+
+    <!--Bloque general-->
+    <section id="general">
+    <!--Fondo-->
+    <section id="mobile">
+        <img src="/Users/equipo/Desktop/IronHack/0101-cssInstagramClone/lab-css-instagram-clone/images/phones.png"
+            alt="mobiles">
+    </section>
+
+    <!--Contenido-->
+    <section id="content">
+        <div id="logo-block">
+            <div id="logo">
+                <h1>Instagram</h1>
+                <img src="/Users/equipo/Desktop/IronHack/0101-cssInstagramClone/lab-css-instagram-clone/images/brand.png"
+                    alt="Instagram Logo">
+            </div>
+
+            <div id="logIn">
+                <img src="/Users/equipo/Desktop/IronHack/0101-cssInstagramClone/lab-css-instagram-clone/images/home.png"
+                    alt="Log In button">
+                <p><b>Log In</b></p>
+            </div>
+        </div>
+
+        <div id="text">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>
+                Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+                friends and family.
+            </p>
+            <p>
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram; it's
+                that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>
+                Oh yeah, did we mention it's free?
+            </p>
+        </div>
+
+        <div id="stores">
+            <div id="apple">
+                <p>Download on the App Store </p>
+                <a href=""></a><img
+                    src="/Users/equipo/Desktop/IronHack/0101-cssInstagramClone/lab-css-instagram-clone/images/badge-iphone.png"
+                    alt="Apple Store Logo">
+            </div>
+            <div id="google">
+                <p>Get it on Google Play</p>
+                <img src="/Users/equipo/Desktop/IronHack/0101-cssInstagramClone/lab-css-instagram-clone/images/badge-android.png"
+                    alt="Google Play Logo">
+            </div>
+        </div>
+
+    </section>
+    </section>
+
+</body>
+
+
+<footer>
+    <div id="nav-bar">
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+
+        <p id="copyright">© Instagram 2014</p>
+    </div>
+
+</footer>
+
 </html>
