--- a/index.html
+++ b/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="container">
+      <div class="column1">
+        <img src="https://github.com/t4ms/lab-css-instagram-clone/blob/master/images/phones.png?raw=true" />
+
+        <div class="column2">
+          <header>
+            <h1>
+              <a href="#"
+                ><img class ="imglogo" src="https://github.com/t4ms/lab-css-instagram-clone/blob/master/images/brand.png?raw=true" alt="Instagram"
+              />
+            </h1>
+            <a class="loginButtom" href="#">Log in</a>
+          </header>
+
+          <section>
+            <h1>Capture and Share the World's Moments</h1>
+
+            <p>
+              Instagram is a fast, beautiful and fun way to share your life with
+              friends and family.
+            </p>
+
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+
+            <p>Oh yeah, did we mention it's free?</p>
+            <img                  src="https://github.com/t4ms/lab-css-instagram-clone/blob/master/images/badge-iphone.png?raw=true"/>
+            <img src="https://github.com/t4ms/lab-css-instagram-clone/blob/master/images/badge-android.png?raw=true"/>
+          </section>
+        </div>
+      </div>
+
+      <footer>
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+
+        &copy; 2014 Instagram
+      </footer>
+    </div>
   </body>
 </html>
