--- a/index.html
+++ b/index.html
@@ -4,13 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <div>
+        <img class="phones" src="./images/phones.png" alt="">
+      </div>
+      <div>
+        <img class="logo" src="./images/brand.png" alt="">
+        <a class="login" href="#">Log in</a>
+        <div class="content">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <a href="#"><img class="appstore" src="./images/badge-iphone.png" alt=""></a>
+        <a href="#"><img class="playstore" src="./images/badge-android.png" alt=""></a>
+      </div>
+    </div> 
+    </main>  
+    <footer>
+      <ul>
+        <li class="footer"><a href="">About Us</a></li>
+        <li class="footer"><a href="">Support</a></li>
+        <li class="footer"><a href="">Blog</a></li>
+        <li class="footer"><a href="">Press</a></li>
+        <li class="footer"><a href="">API</a></li>
+        <li class="footer"><a href="">Jobs</a></li>
+        <li class="footer"><a href="">Privacy</a></li>
+        <li class="footer"><a href="">Terms</a></li>
+        <li class="copyright"><a href="">&copy; 2014 Instagram</a></li>
+      </ul>
+    </footer>  
   </body>
 </html>
