--- a/index.html
+++ b/index.html
@@ -4,13 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <article>
+      <section id="photo-iphones"class="center">
+      <img id="iphones" src=images/phones.png>
+      </section>
+      <section id="instagram">
+      <div id="instagram-logo-log-in">
+          <img id="instagram-logo"src=images/brand.png>
+          <div>
+            <button id="log-in">
+              <img src=images/home.png>
+              <p><b>Log in</b></p>
+            </button>
+          </div>
+      </div>
+      <div id="white-box">
+      <h1>Capture and Share the World's Moments</h1>
+      <p> Instagram is a <b>fast</b>, <b>beautiful </b>and <b>fun</b> way to share your life with
+        friends and family.<br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+        Oh yeah, did we mention it's free?</p>
+        <div id="download">
+          <img src=images/badge-iphone.png>
+          <img src=images/badge-android.png>
+        </div>
+      </div>
+      </section>
+    </article>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
