--- a/index.html
+++ b/index.html
@@ -11,36 +11,37 @@
 <body>
   <main>
     <article>
-      <section class="left"><img src="./images/phones.png" alt="phones"></section>
+      <section class="left"><img class="imgDesktop" src="./images/phones.png" alt="phones"></section>
       <section class="right">
-        <div><img src="./images/brand.png" alt="logo-insta" class="logo">
-          <a href="">Log in</a>
+        <div class="logoDiv"><img src="./images/brand.png" alt="logo-insta" class="logo">
+          <a class="log" href="">Log in</a>
         </div>
-        <div>
+        <div class="textDiv">
           <h1>Capture and Share the World's Moments</h1>
+          <img src="./images/phones.png" alt="" class="imgMobile">
           <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
             life with friends and family. Take a picture or
             video, choose a filter to transform its look and feel, then post to Instagram
             filter to transform its look an feel, then post to Instagram -it's that easy. You can even share to
             Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
-          <img src="./images/badge-iphone.png" alt="Download on the App Store" class="right">
-          <img src="./images/badge-android.png" alt="Get it on Google Play" class="right">
+          <img src="./images/badge-iphone.png" alt="Download on the App Store" class="leftImg">
+          <img src="./images/badge-android.png" alt="Get it on Google Play" class="rightImg">
         </div>
       </section>
     </article>
   </main>
   <footer>
     <ul>
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
-      <li>&copy; 2014 Instagram</li>
+      <li><a href="">About Us</a></li>
+      <li><a href="">Support</a></li>
+      <li><a href="">Blog</a></li>
+      <li><a href="">Press</a></li>
+      <li><a href="">API</a></li>
+      <li><a href="">Jobs</a></li>
+      <li><a href="">Privacy</a></li>
+      <li><a href="">Terms</a></li>
+      <li>&copy; 2014 Instagram</a></li>
     </ul>
   </footer>
 </body>
