--- a/index.html
+++ b/index.html
@@ -1,16 +1,51 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+<head>
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+<body>
+  <div class=upper-container>  
+    <div> 
+     <img src="./images/phones.png" alt="Instagram view">
+    </div>
+    <div>
+      <img src="./images/brand.png"  alt="Instagram">
+      <button class=login-CTA>
+      <img src="./images/home.png" alt="home">
+      <p>Log in</p>
+      </button>
+      <div>
+       <h1>Capture and Share the World's Moments</h1> 
+          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family. </p>
+          </br>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          </br>  
+          <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div>
+        Download on the App Store
+        Get it on Google Play
+      </div>
+    </div>
+  </div>
+
+<footer>
+  <div>
+    <ul class=footer>  
+    <li>About Us</li>
+    <li>Support</li>
+    <li> Press</li>
+    <li> API</li>
+    <li> Jobs</li>
+    <li> Privacy</li>
+    <li> Terms</li>
+    <li id=trademark> &copy; 2014 Instagram</li>
+    </ul>
+  </div>
+</footer>
   </body>
 </html>
